[ConstraintSystem] `trySimplifyToExpr` shouldn't rely on locator being always anchored

If constraint system is used as part of the declaration checker to
e.g. verify generic requirements for a witness, locators are not going
to have an anchor.

Resolves: [SR-10728](https://bugs.swift.org/browse/SR-10728)
Resolves: rdar://problem/50987089